@@ -21,13 +21,13 @@
 
 bioclipse32 = 'http://prdownloads.sourceforge.net/bioclipse/bioclipse2.0.linux.gtk.x86.zip'
 bioclipse64 = 'http://prdownloads.sourceforge.net/bioclipse/bioclipse2.0.linux.gtk.x86_64.zip'
-electric = 'http://ftp.gnu.org/pub/gnu/electric/electricBinary-8.09.jar'
+electric = 'http://ftp.gnu.org/pub/gnu/electric/electricBinary-8.11.jar'
 sweethome32 = 'http://prdownloads.sourceforge.net/sweethome3d/SweetHome3D-2.5-linux-x86.tgz'
 sweethome64 = 'http://prdownloads.sourceforge.net/sweethome3d/SweetHome3D-2.5-linux-x64.tgz'
 tsinghuatex = 'http://thuthesis.googlecode.com/files/thuthesis-4.5.1.tgz'
-nscript = 'http://www.nanolx.org/free/NScripts-3.6.tar.bz2'
+nscript = 'http://www.nanolx.org/downloads/NScripts-3.7.1.tar.bz2'
 cdt = 'http://download.eclipse.org/tools/cdt/releases/galileo/dist/cdt-master-6.0.0.zip'
-pydev = 'http://prdownloads.sourceforge.net/pydev/org.python.pydev.feature-1.5.7.2010050621.zip'
+pydev = 'http://prdownloads.sourceforge.net/pydev/org.python.pydev.feature-1.6.2.2010090812.zip'
 pbc64 = 'http://voltar.org/pbcfiles/libpbc0_0.5.8_amd64.deb'
 pbcdev64 = 'http://voltar.org/pbcfiles/libpbc-dev_0.5.8_amd64.deb'
 gnomeartng_hardy = 'http://download.berlios.de/gnomeartng/gnomeartng-0.7.0-hardy.deb'
@@ -40,5 +40,5 @@ mytourbook32 = 'http://prdownloads.sourceforge.net/mytourbook/mytourbook_10.7.0.
 mytourbook64 = 'http://prdownloads.sourceforge.net/mytourbook/mytourbook_10.7.0.linux.gtk.x86_64.zip'
 routeconverter32 = 'http://www.routeconverter.de/download/RouteConverterPrereleaseLinux.jar'
 routeconverter64 = 'http://www.routeconverter.de/download/RouteConverterPrereleaseLinux64.jar'
-geogebra32 = 'http://geogebra.googlecode.com/files/GeoGebra-Linux-Portable-3-2-42-0.tar.gz'
-geogebra64 = 'http://geogebra.googlecode.com/files/GeoGebra-Linux-64bit-Portable-3-2-42-0.tar.gz'
+geogebra32 = 'http://geogebra.googlecode.com/files/GeoGebra-Linux-Portable-3-2-44-0.tar.gz'
+geogebra64 = 'http://geogebra.googlecode.com/files/GeoGebra-Linux-64bit-Portable-3-2-44-0.tar.gz'
